--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="divs.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Send me a random message</title>
 </head>
 <body>
+    <div class="intromessage">
+        <h1 id="welcome"></h1>
+    </div>
     
+    <input type="text" value= "type message here" id="textbox" class="textbox">
+    <button id = "send"> Ok </button>
+    <script src="app.js"></script>
 </body>
 </html>
