--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="divs.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <title>Send me a random message</title>
+    <title>Message in a Bottle</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 </head>
-<body>
+<body >
+    <video class ="beach" autoplay loop muted>
+        <source src="Beach.mp4">
+    </video>
+    
     <div class="intromessage">
+        <div class="signed">Signed by: </div>
+        <input type="text" value="Anonymous" id="nameplace" class="nametag" onclick="this.value = ''">
+        <br>
         <h1 id="welcome"></h1>
+        <div class="author">
+            <h3 id="author"></h3>
+        </div>
+        <button class="next" id = "next"><img src="WhiteArrow.png"></button>
     </div>
     
-    <input type="text" value= "type message here" id="textbox" class="textbox">
-    <button id = "send"> Ok </button>
+    <input type="text" value= "type message here" id="textbox" class="textbox" onclick="this.value = ''">
+    <button id = "send" class="sendbutton"> <img src="BottleIcon.png"></button>
     <script src="app.js"></script>
 </body>
 </html>
