style isnt fucked anymore for other platforms

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
 
 </head>
 <body >
-    <video class ="beach" autoplay loop muted>
+    <!-- <video class ="beach" autoplay loop muted>
         <source src="Beach.mp4">
-    </video>
+    </video> -->
     
     <div class="intromessage">
         <div class="signed">Signed by: </div>
