Icon added + credits

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="divs.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="icon" href="Bottle message icon.png">
     <title>Message in a Bottle</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -21,6 +22,9 @@
     
     <div class="intromessage">
         <div class="signed">Signed by: </div>
+        <div class="credits">
+            Proudly developed by Mateus Mori Ikezaki
+        </div>
         <input type="text" value="Anonymous" id="nameplace" class="nametag" onclick="this.value = ''">
         <br>
         <h1 id="welcome"></h1>
